@@ -13,10 +13,16 @@ repositories {
 
 application {
     mainClass = 'ro.mpp2024.App'
+
 }
 
+def javafxVersion = '23'
+def currentPlatform = org.gradle.internal.os.OperatingSystem.current().isWindows() ? 'win' :
+        org.gradle.internal.os.OperatingSystem.current().isMacOsX() ? 'mac' : 'linux'
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
+
+    testImplementation platform('org.junit:junit-bom:5.10.0') // Asta e corect
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
@@ -27,8 +33,23 @@ dependencies {
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     implementation 'org.xerial:sqlite-jdbc:3.49.1.0'
 
+
+    implementation "org.openjfx:javafx-controls:$javafxVersion:$currentPlatform"
+    implementation "org.openjfx:javafx-fxml:$javafxVersion:$currentPlatform"
+    implementation "org.openjfx:javafx-graphics:$javafxVersion:$currentPlatform"
+    implementation "org.openjfx:javafx-base:$javafxVersion:$currentPlatform"
+
 }
 
 test {
     useJUnitPlatform()
+}
+
+tasks.named('run') {
+    doFirst {
+        jvmArgs = [
+                "--module-path", configurations.runtimeClasspath.asPath,
+                "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
+        ]
+    }
 }
